--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.0)
 project(greenhouse_data_server)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
-    src/main.c
+        src/main.cpp
         src/APWeatherData.cpp src/APWeatherData.h)
 
 add_executable(greenhouse_data_server ${SOURCE_FILES})
