--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCE_FILES
 
 add_executable(greenhouse_data_server ${SOURCE_FILES})
 
-link_directories(/use/local/lib)
+link_directories(/usr/local/lib)
+include_directories(/usr/local/include)
 target_link_libraries(greenhouse_data_server sqlite3)
-target_link_libraries(greenhouse_data_server jsoncpp)
+target_link_libraries(greenhouse_data_server libjsoncpp)
