# Please enter the commit message for your changes. Lines sta

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ link_directories(/use/local/lib)
 target_include_directories(greenhouse_data_server PUBLIC /usr/include/jsoncpp/)
 target_link_libraries(greenhouse_data_server sqlite3)
 target_link_libraries(greenhouse_data_server jsoncpp)
+target_link_libraries(greenhouse_data_server curl)
