Adding some structure so I can easily add weather sources.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
         src/main.cpp
-        src/APWeatherData.cpp src/APWeatherData.h)
+        src/APWeatherDataManager.cpp src/APWeatherDataManager.h src/util/APSimpleSQL.cpp src/util/APSimpleSQL.h src/weather_sources/APWeatherSource.cpp src/weather_sources/APWeatherSource.h src/weather_sources/APOpenWeatherMap.cpp src/weather_sources/APOpenWeatherMap.h src/weather_sources/APDarkSkyForcastIO.cpp src/weather_sources/APDarkSkyForcastIO.h)
 
 add_executable(greenhouse_data_server ${SOURCE_FILES})
 
