Started on parsing the Forecast.io data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES
         src/main.cpp
-        src/APWeatherDataManager.cpp src/APWeatherDataManager.h src/util/APSimpleSQL.cpp src/util/APSimpleSQL.h src/weather_sources/APWeatherSource.cpp src/weather_sources/APWeatherSource.h src/weather_sources/APOpenWeatherMap.cpp src/weather_sources/APOpenWeatherMap.h src/weather_sources/APDarkSkyForcastIO.cpp src/weather_sources/APDarkSkyForcastIO.h src/util/APSimpleJSONQuery.cpp src/util/APSimpleJSONQuery.h src/util/APException.cpp src/util/APException.h src/util/APSQLException.cpp src/util/APSQLException.h)
+        src/APWeatherDataManager.cpp src/APWeatherDataManager.h src/util/APSimpleSQL.cpp src/util/APSimpleSQL.h src/weather_sources/APWeatherSource.cpp src/weather_sources/APWeatherSource.h src/weather_sources/APOpenWeatherMap.cpp src/weather_sources/APOpenWeatherMap.h src/weather_sources/APDarkSkyForcastIO.cpp src/weather_sources/APDarkSkyForcastIO.h src/util/APSimpleJSONQuery.cpp src/util/APSimpleJSONQuery.h src/util/APException.cpp src/util/APException.h src/util/APSQLException.cpp src/util/APSQLException.h src/util/APKeyValuePair.cpp src/util/APKeyValuePair.h)
 
 add_executable(greenhouse_data_server ${SOURCE_FILES})
 include_directories(src/util src/weather_sources)
