--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ link_directories(/use/local/lib)
 target_include_directories(greenhouse_data_server PUBLIC /usr/include/jsoncpp/)
 target_link_libraries(greenhouse_data_server sqlite3)
 target_link_libraries(greenhouse_data_server jsoncpp)
+target_link_libraries(greenhouse_data_server ssh)
 target_link_libraries(greenhouse_data_server curl)
