Image Transfers are now working!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ target_include_directories(greenhouse_data_server PUBLIC /usr/include/jsoncpp/)
 target_link_libraries(greenhouse_data_server sqlite3)
 target_link_libraries(greenhouse_data_server jsoncpp)
 target_link_libraries(greenhouse_data_server ssh)
+target_link_libraries(greenhouse_data_server pthread)
 target_link_libraries(greenhouse_data_server curl)
